--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" width="device-width, initial-scale=1.0">
+  <!-- Corrected viewport so media queries work -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Hemanth's website.">
   <meta name="author" content="Hemanth Sabbella">
   <meta property="og:image" content="img/hemanth_percom.jpg" />
@@ -13,13 +14,12 @@
   <link href="/css/jumbotron-narrow.css" rel="stylesheet">
   <link href="/css/style.css" rel="stylesheet">
 
-  <!-- override link and highlight colors -->
+  <!-- override link and highlight colors + mobile menu CSS -->
   <style>
     :root {
       --ocean-primary: #0096C7;
-      --ocean-hover:   #006494; /* optional hover shade */
+      --ocean-hover:   #006494;
     }
-    /* make all anchor tags ocean primary */
     a {
       color: var(--ocean-primary);
       text-decoration: none;
@@ -30,12 +30,12 @@
       text-decoration: underline;
     }
 
-    /* mobile menu: hidden by default */
+    /* hide the mobile menu on desktop */
     .mobile-menu {
       display: none;
     }
 
-    /* mobile-only overrides */
+    /* mobile-only: swap nav-pills for mobile menu */
     @media only screen and (max-width: 768px) {
       /* hide desktop nav */
       .nav.nav-pills.pull-right {
@@ -55,7 +55,7 @@
         color: var(--ocean-primary);
         text-decoration: none;
         display: block;
-        /* text-size remains as in desktop */
+        /* text-size unchanged */
       }
       .mobile-menu a:hover,
       .mobile-menu a:focus {
@@ -69,7 +69,7 @@
 <body>
   <div class="container">
     <div class="header">
-      <!-- desktop nav-pills (unchanged) -->
+      <!-- original desktop nav-pills -->
       <ul class="nav nav-pills pull-right">
         <li><a href="/projects" title="Projects" style="text-transform: none;">Projects</a></li>
         <li><a href="/publications" title="Publications" style="text-transform: none;">Publications</a></li>
@@ -219,18 +219,14 @@
 
     <div class="footer">
       <div class="row">
-        <div class="col-sm-8">
-          <p><small></small></p>
-        </div>
-        <div class="col-sm-4">
-          <p class="pull-right"><small></small></p>
-        </div>
+        <div class="col-sm-8"><p><small></small></p></div>
+        <div class="col-sm-4"><p class="pull-right"><small></small></p></div>
       </div>
     </div> <!-- /footer -->
 
   </div> <!-- /container -->
 
-  <!-- javascript at the end of the doc so page loads faster -->
+  <!-- javascript at the end -->
   <script src="https://code.jquery.com/jquery.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="/js/library.js"></script>
